--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,8 +1,39 @@
-<div class="border-2 border-sky-500 p-5 grid grid-cols-4 gap-4 boxPlay" >
-  @for (color of colors; track color) {
-
-  <app-box-color [color]="color" [ngStyle]="{ 'width.px': getDynamicSize(), 'height.px': getDynamicSize() }"></app-box-color>
-  }
+<div class="text-center my-3">
+  <button (click)="startGame()" class="btn btn-success">Start</button>
+  <button (click)="ResetPlayerSequence()" class="btn btn-info ms-3">Replay</button>
+  <button (click)="IsGood()" class="btn btn-info ms-3">Go</button>
+  <button (click)="EndGame = true; message = 'Game Over!';" class="btn btn-danger ms-3">End the Game</button>
 </div>
 
+<div class="text-center my-4">
+  <h3>Countdown: {{ countdown }}</h3> <!-- Displaying countdown -->
+  <h3>{{ message }}</h3> <!-- Displaying message -->
+  <h3>Score: {{ score }}</h3> <!-- Displaying score -->
+</div>
 
+<div class="border-2 border-sky-500 p-5 grid gap-4 boxPlay" [ngStyle]="{
+  'grid-template-columns': 'repeat(' + getColumnCount() + ', 1fr)'
+}">
+  <!-- Display randomized sequence for the player to click if StartAnswers is true -->
+  <ng-container *ngIf="StartAnswers; else memorizeSequence">
+    <app-box-color
+      *ngFor="let color of randomizedSequence"
+      (click)="handlePlayerClick(color)"
+      [color]="color"
+      [Border]="Border"
+      [width]="getDynamicSize() - (getDynamicSize() * 0.35)"
+      [height]="getDynamicSize() - (getDynamicSize() * 0.35)">
+    </app-box-color>
+  </ng-container>
+
+  <!-- Display the game sequence for memorization if StartAnswers is false -->
+  <ng-template #memorizeSequence>
+    <app-box-color
+      *ngFor="let color of gameSequence"
+      [color]="color"
+      [Border]="Border"
+      [width]="getDynamicSize()"
+      [height]="getDynamicSize()">
+    </app-box-color>
+  </ng-template>
+</div>
