--- a/src/app/box-color/box-color.component.css
+++ b/src/app/box-color/box-color.component.css
@@ -3,3 +3,7 @@
   margin: 2px;
 
 }
+.Color:hover {
+  background-color: #ff6347; /* Change to your desired hover color */
+  transform: scale(1.05); /* Example of a scaling effect */
+}
