--- a/src/app/commands/commands.component.html
+++ b/src/app/commands/commands.component.html
@@ -1,2 +1,21 @@
-
+<div class="text-center my-3">
+  <button *ngIf="!IsPlay" (click)="onStartGame()" class="btn btn-success">Start</button>
+  <button *ngIf="EndGame" (click)="onRestGame()" class="btn btn-info ms-3">Reset Game</button>
+  <ng-container *ngIf="countdown === 0 && IsPlay && !EndGame">
+    <button
+      [disabled]="gameService.playerSequence.length === 0"
+      (click)="onResetPlayerSequence()"
+      class="btn btn-info ms-3"
+    >
+      Replay
+    </button>
+    <button
+      [disabled]="gameService.playerSequence.length === 0"
+      (click)="onIsGood()"
+      class="btn btn-accent ms-3"
+    >
+      Go
+    </button>
+  </ng-container>
+</div>
 
