--- a/src/app/Component/box-color/box-color.component.html
+++ b/src/app/Component/box-color/box-color.component.html
@@ -5,5 +5,8 @@
   class="color-box"
   [class.randomized-hover]="isRandomized"
   (mouseenter)="onMouseEnter()"
-  (mouseleave)="onMouseLeave()">
+  (mouseleave)="onMouseLeave()"
+
+
+>
 </div>
