--- a/src/app/Component/score/score.component.html
+++ b/src/app/Component/score/score.component.html
@@ -7,6 +7,7 @@
 
 }
   <h3>{{ message }}</h3>
+  <h3>level :{{ level }}</h3>
   <div class="flex ">
   @for (player of gameService.playerSequence ; track player) {
     <div class="rounded-full me-1" [style.background-color]="player" style="width: 40px ; height: 40px">
